# AB-interface-ARGoS-module

./: CMakeLists.txt  README.md  allVotes.txt  global_config.sh  run_experiment.sh  start_experiment1.sh
contracts/: smart_contract_template.sol  smart_contract_threshold.sol
controllers/: CMakeLists.txt  epuck_environment_classification.cpp  epuck_environment_classification.h  helpers.cpp  helpers.h  interface.txt
controllers/epuck_environment_classification/: data.txt  epuck_environment_classification.cpp  epuck_environment_classification.h  generic_interface.cpp  generic_interface.h  geth_static.cpp  geth_static.h
evaluation/: aggregate_runs.R
experiments/: epuck.argos  epuck_EC_locale_template.argos
interface/: generic_interface.cpp  generic_interface.h
loop_functions/: CMakeLists.txt  environment_classification_loop_function.cpp  environment_classification_loop_function.h
loop_functions/environment_classification_loop_functions/: environment_classification_loop_function.cpp  environment_classification_loop_function.h
scripts/: install_argos.sh
starters/: 1_Plain.sh  2_Binary.sh  3_Threshold.sol  5_Byzantine.sh  6_Byzantine_Binary.sh  7_Sybil.sh
truffle-stuff/: .#outtakes.txt  estimation.js.backup  outtakes.txt  package-lock.json  truffle.js
truffle-stuff/contracts/: Estimation.sol  Estimation.sol-WMSR  Estimation.sol-realgood  Estimation.sol.bk
truffle-stuff/migrations/: 2_deploy_contracts.js
truffle-stuff/test/: estimation.js  myfile.csv  mylongfile.csv  package-lock.json
